adding update using new branch

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <p>
     Machine learning (ML) is a subset of artificial intelligence (AI) that allows computer systems to automatically learn from data and improve their performance without being explicitly programmed. It uses algorithms to find patterns in data, make predictions, and perform tasks, with its accuracy enhancing over time as it processes more data. 
 </p>
+<p>
+    adding this new update in feature1 branch.
+</p>
